[tool.poetry]
name = "pjecz-pegaso-api-key"
version = "1.0"
description = "PJECZ Pegaso API para brindar datos de la BD SIBED a otros sistemas"
authors = ["Guillermo Valdes <guillermo.valdes@pjecz.gob.mx>"]
license = "AGPL-3.0"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.79.0"
pydantic = "^1.9.1"
psycopg2-binary = "^2.9.3"
SQLAlchemy = "^1.4.39"
SQLAlchemy-Utils = "^0.38.3"
hashids = "^1.3.1"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
gunicorn = "^20.1.0"
Unidecode = "^1.3.4"
python-multipart = "^0.0.5"
uvicorn = "^0.18.2"
python-dotenv = "^0.21.0"

[tool.poetry.dev-dependencies]
pylint = "^2.14.5"
pylint-sqlalchemy = "^0.2.0"
black = "^22.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 256
